--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-slot": "^1.0.2",
     "@supabase/supabase-js": "^2.32.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.17",
     "@types/react-dom": "18.2.7",
     "ai": "^2.1.28",
     "autoprefixer": "10.4.14",
+    "class-variance-authority": "^0.7.0",
     "eslint": "8.46.0",
     "eslint-config-next": "13.4.12",
     "langchain": "^0.0.159",
+    "lucide-react": "^0.284.0",
     "next": "13.4.12",
     "postcss": "8.4.27",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-loader-spinner": "^5.4.5",
     "react-toastify": "^9.1.3",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6",
     "zod": "^3.22.3",
